<resources>
    <string name="app_name">Thế giới truyện</string>
    <string name="library">Tủ truyện</string>
    <string name="bookcase">Tủ sách</string>
    <string name="book_name">Tên sách</string>
    <string name="homePage">Trang chủ</string>
    <string name="rechargePage">Nạp xu</string>
    <string name="postPage">Đăng bài</string>
    <string name="infoPage">Thông tin ứng dụng</string>
    <string name="favoritePage">Truyện yêu thích</string>
    <string name="story_name">Tên truyện: </string>
    <string name="chap_name">Tên chap: </string>
    <string name="author">Tác giả: </string>
    <string name="author_No_colons">Tác giả </string>
    <string name="date_created">Ngày tạo: </string>
    <string name="read_story">Đọc truyện</string>
    <string name="comment">Bình luận</string>
    <string name="buy_story">Mua truyện</string>
    <string name="description">Mô tả: </string>
    <string name="list_chapter">Danh sách tập</string>
    <string name="category">Thể loại: </string>
    <string name="status">Trạng thái:</string>
    <string name="chapter">Số tập :</string>
    <string name="chap">Tập </string>
    <string name="ghost_story">Truyện ma</string>
    <string name="fairy_tales">Truyện dân gian thế giới</string>
    <string name="jokes_story">Truyện cười</string>
    <string name="fairy_tales_vi">Truyện dân gian Việt Nam</string>
    <string name="folk_tale">Truyện dân gian</string>
    <string name="recommend_for_you">Đề xuất cho bạn</string>
    <string name="search_history">Tìm kiếm gần đây</string>
    <string name="enter_name">Nhập tên truyện</string>
    <string name="history">Tìm thấy </string>
    <string name="result">kết quả</string>
    <string name="remove_history">Xóa lịch sử</string>
    <string name="add_Favourite">Thêm vào danh sách yêu thích</string>
    <string name="story_Favourite">Danh sách yêu thích</string>
    <string name="post_Story">Đăng bài</string>
    <string name="add_newStory">Truyện mới</string>
    <string name="add_newChap">Chap mới</string>
    <string name="content">Nội dung: </string>
    <string name="image_story">Ảnh:</string>
    <string name="save_Story">Đăng truyện</string>
    <string name="date_updated">Ngày cập nhật:</string>
    <string name="notification">Thông báo</string>
    <string name="congratulation">Chúc mừng</string>
    <string name="story_congratulation">Bạn đã update thành công truyện</string>
    <string name="content_congratulation">Bạn đã update thành công!</string>
    <string name="ok">OK</string>
    <string name="off_dialog">Tắt thông báo</string>
    <string name="who_areYou">Bạn là ai?</string>
    <string name="reader">Độc giả</string>
    <string name="login">Đăng nhập</string>
    <string name="account">Tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="manage_story">Quản lý truyện</string>
    <string name="my_story">Truyện của tôi</string>
    <string name="logout">Đăng xuất</string>
    <string name="agree">Đồng ý</string>
    <string name="close">Đóng</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="confirm">Xác nhận</string>
    <string name="are_you_sure">Bạn có chắc chắn muốn thoát?</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="register">Đăng ký</string>
    <string name="form_login">Giao diện đăng nhập cổ điển</string>
    <string name="app_information">Thông tin ứng dụng</string>
    <string name="account_information">Thông tin tài khoản</string>
    <string name="version_app">phiên bản 1.0.0</string>
    <string name="manage_your_story">Danh sách truyện của bạn</string>
    <string name="admin">Quản trị viên</string>
    <string name="manage_account">Quản lý tài khoản</string>
    <string name="again_password">Nhập lại mật khẩu</string>
    <string name="phoneNumber">Số điện thoại</string>
    <string name="phone">+84 0344..</string>
    <string name="gmail">Gmail</string>
    <string name="user_name">Tên hiển thị</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="do_YouHaveAccount">Bạn chưa có tài khoản?</string>
    <string name="enter_username_please">Vui lòng nhập tài khoản!</string>
    <string name="enter_password_please">Vui lòng nhập mật khẩu!</string>
    <string name="enter_all_field">Vui lòng nhập tất cả các trường!</string>
    <string name="enter_otp">Vui lòng nhập mã OTP!</string>
    <string name="register_success">Bạn đã đăng ký thành công!</string>
    <string name="success">Thành công!</string>
    <string name="failed">Thất bại!</string>
    <string name="warning">Cảnh báo</string>
    <string name="password_not_duplicate">Mật khẩu không trùng nhau</string>
    <string name="phone_number_not_like_format">Không thành công!Vui lòng nhập đúng định dạng số điện thoại!</string>
    <string name="hello">Xin chào</string>
    <string name="verify_phone_number_please">Vui lòng xác thực số điện thoại</string>
    <string name="goToStoryWorld">Đến với THẾ GIỚI TRUYỆN</string>
    <string name="youNeedAuthorPermission">Bạn cần quyền Tác giả để sử dụng tính năng này</string>
    <string name="youNeedAdminPermission">Bạn cần quyền Admin để sử dụng tính năng này</string>
    <string name="areYouSureDelete">Bạn có chắc chắn muốn xóa truyện: </string>
    <string name="email">Email</string>
    <string name="add_Account">Tạo tài khoản</string>
    <string name="account_detail">Chi tiết tài khoản</string>
    <string name="gender">Giới tính</string>
    <string name="permission">Quyền</string>
    <string name="my_account">Tài khoản của tôi</string>
    <string name="account_edit">Sửa thông tin tài khoản</string>
    <string name="upload">Thay ảnh</string>
    <string name="upload_image">Chọn ảnh</string>
    <string name="otp">mã OTP</string>
    <string name="cast">xu</string>
    <string name="confirm_BuyStory">Bạn chắc chắn muốn mua </string>
    <string name="cost_not_enough">Xu trong tài khoản của bạn không đủ</string>
    <string name="boughStory">Truyện đã mua</string>
    <string name="list_buy_story">Danh sách truyện đã mua</string>
    <string name="your_story">Bạn đã mua bộ truyện này rồi</string>
    <string name="story_cast">Cửa hàng xu</string>
    <string name="yourCost">Xu của bạn</string>
    <string name="recharge_cost">Nạp xu</string>
    <string name="create_Bill">Tạo hóa đơn</string>
    <string name="token">Token</string>
    <string name="ten_cost">10k = 10 xu</string>
    <string name="twenty_cost">20k = 22 xu</string>
    <string name="fifty_cost">50k = 70 xu</string>
    <string name="oneHundred_cost">100k = 150 xu</string>
    <string name="fiveHundred_cost">500k = 800 xu</string>
</resources>