<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/manageStoryPage"
        android:icon="@drawable/ic_manage"
        android:title="@string/manage_story" />
    <item
        android:id="@+id/myStore"
        android:icon="@drawable/ic_library_books"
        android:title="@string/my_story" />
    <item
        android:id="@+id/postPage"
        android:icon="@drawable/ic_create"
        android:title="@string/postPage" />
    <item
        android:id="@+id/manageAccountPage"
        android:icon="@drawable/ic_add_account"
        android:title="@string/manage_account" />
    <item
        android:id="@+id/logoutPage"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />
</menu>