<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gunny"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/yourCost"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <TextView
        android:id="@+id/txtYourCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/yourCost"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:drawableStartCompat="@drawable/ic_diamond"
        app:drawableTint="#F57F17" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnTen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ten_cost"
            android:textColor="#B71C1C" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnTwenty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twenty_cost"
            android:textColor="#B71C1C" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnFifty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fifty_cost"
            android:textColor="#B71C1C" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnOneHundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oneHundred_cost"
            android:textColor="#B71C1C" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/btnFiveHundred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveHundred_cost"
            android:textColor="#B71C1C" />

    </RadioGroup>


    <TextView
        android:id="@+id/btnCreateOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#2196F3"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/create_Bill"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/token" />

    <TextView
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#2196F3"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/recharge_cost"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="#FFFFFF" />

</LinearLayout>