<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_dialog"
    android:backgroundTint="#BF360C"
    android:orientation="vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/congratulation"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_search_view"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@null" />

        <TextView
            android:id="@+id/txtContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/content_congratulation"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_button_round_4dp"
            android:backgroundTint="#FF6F00"
            android:foreground="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/off_dialog"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>