<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_search_view"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

    <TextView
        android:id="@+id/txtContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enter_otp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <EditText
        android:id="@+id/edtOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="phone"
        android:background="@drawable/bg_edittext"
        android:hint="@string/otp"
        android:inputType="number"
        android:padding="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_round_4dp"
            android:backgroundTint="#A9F54B17"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            app:drawableEndCompat="@drawable/ic_send"
            app:drawableTint="#FFFFFF" />

    </LinearLayout>

</LinearLayout>